# Outfitd

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PREMIUM_UPGRADES.md  README.md  docker-compose.yml  pyproject.toml  user_persona.md  user_persona.md.example
scripts/: clear_discovery_cache.py  dump_items.py  generate_trunk.py  init_db.py  repair_trunk.py
src/: config.py  database.py  main.py  models.py
src/curation/: llm_client.py  outfit_assembler.py  outfit_visualizer.py  stylist_brief.py
src/discovery/: brand_discovery.py  enrichment.py  fallback.py  image_enricher.py  perplexity.py  product_parser.py  router.py  search_queries.py  serper.py  service.py  url_validator.py
src/feedback/: learner.py  router.py  service.py
src/profile/: router.py  service.py
src/shoes/: router.py  service.py
src/templates/: base.html  discover.html  history.html  profile.html  shoes.html  trunk.html
src/trunk/: router.py  scheduler.py  service.py
tests/: conftest.py  test_curation.py  test_discovery.py  test_feedback.py  test_trunk_service.py
